--- a/src/MyTemplate.App/App.axaml
+++ b/src/MyTemplate.App/App.axaml
@@ -33,15 +33,15 @@
                 <ResourceInclude Source="Controls/Index.axaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-        <FontFamily x:Key="JetbrainsFont">avares://shadui-app/Assets/Fonts#Jetbrains</FontFamily>
-        <FontFamily x:Key="ManropeFont">avares://shadui-app/Assets/Fonts#Manrope</FontFamily>
-        <FontFamily x:Key="LucideIcon">avares://shadui-app/Assets/Fonts#lucide</FontFamily>
-        <FontFamily x:Key="MyTemplateIcon">avares://shadui-app/Assets/Fonts#shadui</FontFamily>
+        <FontFamily x:Key="JetbrainsFont">avares://MyTemplate.App/Assets/Fonts#Jetbrains</FontFamily>
+        <FontFamily x:Key="ManropeFont">avares://MyTemplate.App/Assets/Fonts#Manrope</FontFamily>
+        <FontFamily x:Key="LucideIcon">avares://MyTemplate.App/Assets/Fonts#lucide</FontFamily>
+        <FontFamily x:Key="MyTemplateIcon">avares://MyTemplate.App/Assets/Fonts#shadui</FontFamily>
         <x:Double x:Key="ControlContentThemeFontSize">12</x:Double>
     </Application.Resources>
     <Application.Styles>
         <shadui:ShadTheme />
         <StyleInclude Source="avares://AvaloniaEdit/Themes/Fluent/AvaloniaEdit.xaml" />
-        <StyleInclude Source="avares://shadui-app/Styles/Index.axaml" />
+        <StyleInclude Source="avares://MyTemplate.App/Styles/Index.axaml" />
     </Application.Styles>
 </Application>
