--- a/src/MyTemplate.App/Styles/Index.axaml
+++ b/src/MyTemplate.App/Styles/Index.axaml
@@ -1,6 +1,6 @@
 ﻿<Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <StyleInclude Source="avares://shadui-app/Styles/Menu.axaml" />
-    <StyleInclude Source="avares://shadui-app/Styles/TextBlock.axaml" />
-    <StyleInclude Source="avares://shadui-app/Styles/Tooltip.axaml" />
-    <StyleInclude Source="avares://shadui-app/Styles/Window.axaml" />
+    <StyleInclude Source="avares://MyTemplate.App/Styles/Menu.axaml" />
+    <StyleInclude Source="avares://MyTemplate.App/Styles/TextBlock.axaml" />
+    <StyleInclude Source="avares://MyTemplate.App/Styles/Tooltip.axaml" />
+    <StyleInclude Source="avares://MyTemplate.App/Styles/Window.axaml" />
 </Styles>
